<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.fx.feemore.business.ui.home.vm.VMMain" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.home.MainActivity">

        <View
            android:id="@+id/v_split"
            style="@style/h_line"
            android:layout_width="0dip"
            app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="0dip"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/v_split"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_bottom_h"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_home"
                style="@style/main_bottom_item"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_item_home"
                android:text="@string/main_item_home" />

            <TextView
                android:id="@+id/tv_drainage"
                style="@style/main_bottom_item"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_item_drainage"
                android:text="@string/main_item_drainage" />

            <TextView
                android:id="@+id/tv_util"
                style="@style/main_bottom_item"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_item_util"
                android:text="@string/main_item_util" />

            <TextView
                android:id="@+id/tv_mine"
                style="@style/main_bottom_item"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_item_mine"
                android:text="@string/main_item_mine" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>