<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7.5dp"
    android:background="@color/colorWhite"
    android:paddingBottom="25dp">

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="11.5dp"
        android:layout_marginEnd="11.5dp"
        android:layout_marginRight="11.5dp"
        android:padding="2dp"
        android:src="@mipmap/ic_home_v3_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_enter_1"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="33.5dp"
        android:src="@mipmap/ic_home_v3_enter_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_enter_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/home_v3_enter_1"
        android:textColor="@color/c_333333"
        app:layout_constraintLeft_toLeftOf="@id/iv_enter_1"
        app:layout_constraintRight_toRightOf="@id/iv_enter_1"
        app:layout_constraintTop_toBottomOf="@id/iv_enter_1" />

    <ImageView
        android:id="@+id/iv_enter_2"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="33.5dp"
        android:src="@mipmap/ic_home_v3_enter_2"
        app:layout_constraintLeft_toRightOf="@id/iv_enter_1"
        app:layout_constraintRight_toLeftOf="@id/iv_enter_3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/home_v3_enter_2"
        android:textColor="@color/c_333333"
        app:layout_constraintLeft_toLeftOf="@id/iv_enter_2"
        app:layout_constraintRight_toRightOf="@id/iv_enter_2"
        app:layout_constraintTop_toBottomOf="@id/iv_enter_2" />

    <ImageView
        android:id="@+id/iv_enter_3"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="33.5dp"
        android:src="@mipmap/ic_home_v3_enter_3"
        app:layout_constraintLeft_toRightOf="@id/iv_enter_2"
        app:layout_constraintRight_toLeftOf="@id/iv_enter_4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/home_v3_enter_3"
        android:textColor="@color/c_333333"
        app:layout_constraintLeft_toLeftOf="@id/iv_enter_3"
        app:layout_constraintRight_toRightOf="@id/iv_enter_3"
        app:layout_constraintTop_toBottomOf="@id/iv_enter_3" />

    <ImageView
        android:id="@+id/iv_enter_4"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="33.5dp"
        android:src="@mipmap/ic_home_v3_enter_4"
        app:layout_constraintLeft_toRightOf="@id/iv_enter_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/home_v3_enter_4"
        android:textColor="@color/c_333333"
        app:layout_constraintLeft_toLeftOf="@id/iv_enter_4"
        app:layout_constraintRight_toRightOf="@id/iv_enter_4"
        app:layout_constraintTop_toBottomOf="@id/iv_enter_4" />
</android.support.constraint.ConstraintLayout>